[gd_scene load_steps=9 format=2]

[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=1]
[ext_resource path="res://Assets/icon.png" type="Texture" id=2]
[ext_resource path="res://StateMachine/PlayerStateExamples/Player.gd" type="Script" id=3]
[ext_resource path="res://StateMachine/PlayerStateExamples/Run.gd" type="Script" id=4]
[ext_resource path="res://StateMachine/PlayerStateExamples/Idle.gd" type="Script" id=5]
[ext_resource path="res://StateMachine/PlayerStateExamples/Air.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.5, 31.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34.5, 35.5 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 467, 283 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, 0 )
scale = Vector2( 1.09375, 1.11719 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Air" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.5, -0.5 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
